--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.0",
+    "flatpickr": "^4.6.13",
     "isotope-layout": "^3.0.6",
     "sweetalert2": "^11.4.29",
     "webpack": "^5.74.0",
